subprojects {

  apply plugin: 'idea'
  apply plugin: 'groovy'
  apply plugin: 'java'
  
  idea {
    module {
      outputDir file('build/classes/main/java')
      testOutputDir file('build/classes/test/java')
//      inheritOutputDirs = true
    }
  }

  sourceSets {
    main {
      java.outputDir = new File(buildDir, "classes/main/java")
      groovy.outputDir = new File(buildDir, "classes/main/java")
    }
    test {
      java.outputDir  = new File(buildDir, "classes/test/java")
      groovy.outputDir = new File(buildDir, "classes/test/java")

    }

  }

  afterEvaluate {
    repositories {
      jcenter()
    }

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    ext {
      lombokVersion = '1.18.4'
    }

    dependencies {
      compileOnly "org.projectlombok:lombok:${lombokVersion}"
      testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
      annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
      testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    }


//        ext {
//            mainClass = 'org.springframework.boot.loader.JarLauncher'
//            launcher = 'run'
//        }

//        jar {
//            inputs.property("moduleName", moduleName)
//            manifest {
//                attributes('Automatic-Module-Name': moduleName)
//            }
//        }

//        compileJava {
//            doFirst {
//                options.compilerArgs = [
//                        '--module-path', classpath.asPath
//                ]
//                classpath = files()
//            }
//        }

//        def java_home = System.getenv('JAVA_HOME')
//        task link(type: Exec) {
//            dependsOn 'clean'
//            dependsOn 'jar'
//
//            workingDir 'build'
//            inputs.property("moduleName", moduleName)
//
//            commandLine "${java_home}/bin/jlink", '--module-path', "../../library/build/libs:libs:${java_home}/jmods:/home/paul/.m2/repository/org/springframework/boot/spring-boot/2.1.2.RELEASE:/home/paul/.m2/repository/org/springframework/spring-core/5.1.4.RELEASE:/home/paul/.m2/repository/org/springframework/spring-beans/5.1.4.RELEASE:/home/paul/.m2/repository/org/springframework/spring-context/5.1.4.RELEASE:/home/paul/.m2/repository/org/springframework/boot/spring-boot-autoconfigure/2.1.2.RELEASE",
//                    '--add-modules', "com.paul.library", '--launcher', "${launcher}=${mainClass}", '--output', 'dist', '--strip-debug',
//                    '--compress', '2', '--no-header-files', '--no-man-pages'
//        }
  }
}